<resources>
    <string name="app_name">Football365</string>
    <string name="title_matches">Matches</string>
    <string name="title_bets">Bet Tips</string>
    <string name="title_profile">Profile</string>
    <string name="welcome">Welcome to Football365 app</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login_hint">Login</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="already_registered">I have already an account</string>
    <string name="first_name_hint">First Name</string>
    <string name="repeat_password_hint">Repeat Password</string>
    <string name="register_hint">Register</string>
    <string name="last_name_hint">Last Name</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed, make sure that all credentials are correct</string>
    <string name="sign_up_to_continue">Get on board, and experience football to the fullest</string>
    <string name="sign_in_to_continue">SignIn to continue</string>
    <string name="sign_up_hint">New here? Let\'s SignUp</string>
    <string name="splash_description_text">Enjoy football at 360°</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_not_valid">This email is not valid, please check it</string>
    <string name="last_name_empty">You have to use a valid last name</string>
    <string name="first_name_empty">You have to use a valid first name</string>
    <string name="password_not_valid"><![CDATA[Password not valid, please check that your password: includes at least one digit number include at least an upper case alphabet include at least a special character ?*@#$%^&-= is at least 8 characters and at most 20 characters]]></string>
    <string name="repeated_password_doesnt_match">Passwords doesn\'t match</string>
    <string name="title_news">News</string>
    <string name="full_name_title">FullName</string>
    <string name="new_password_hint">New password</string>
    <string name="update_hint">Update</string>
    <string name="old_password_hint">Old Password</string>
    <string name="update_confirmation">Please confirm your changes...</string>
    <string name="update_confirmation_button_text">Confirm</string>
    <string name="news_query">soccer</string>
    <string name="news_country">US</string>
    <string name="news_language">en</string>
    <string name="news_author">Author: </string>
    <string name="news_domains">sport.sky.it, calciomercato.com, tuttosport.com, gazzetta.it, sportmediaset.mediaset.it, corrieredellosport.it</string>
    <string name="match_current_time_finished">END</string>
    <string name="match_current_time_paused">INT</string>
    <string name="match_current_time_canceled">CAN</string>
    <string name="match_current_time_live">LIVE</string>
    <string name="match_current_time_suspended">SUSP</string>

    <string name="match_time_zone">0</string>
    <string name="title_activity_match_description">MatchDescriptionActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="password_not_correct">The inserted password is not correct</string>
    <string name="match_comment_title">COMMENT</string>
    <string name="match_line_up_title">LINE UP</string>
    <string name="match_referees_title">REFEREES</string>
    <string name="no_liked_news">You didn\'t like any news...</string>
    <string name="title_liked_news">Liked news</string>
    <string name="no_matches_string">There aren\'t matches for today...</string>
    <string name="email_already_used">This email is already used for another account... please try with another one</string>
    <string name="email_sent">We have sent a confirmation email, please check it to continue...</string>
    <string name="email_confirmed_button_hint">I have confirmed</string>
    <string name="email_resent_text">It seems that your account is not verified, we have sent another email to you address, please verify your account...</string>
    <string name="email_empty">Email field empty...</string>
    <string name="password_empty">Password field empty...</string>
    <string name="send_reset_password_email_button_hint">Send reset email</string>
    <string name="send_password_reset_email_information">Please enter your email address to receive the password change email....</string>
    <string name="reset_password_email_sent">We have sent you an email to reset the password, check it...</string>
    <string name="go_to_login">Go to login page</string>
    <string name="email_not_used">There isn\'t an account with this email...</string>
    <string name="logout_hint">Logout</string>
    <string name="logout_confirmation">Logout... Are you sure?</string>


</resources>