<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/yellow">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/loginLogo"
        android:src="@drawable/ic_baseline_sports_soccer_24"
        android:transitionName="logo_image"

        ></ImageView>

    <TextView
        android:id="@+id/sign_up_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="25sp"
        android:transitionName="welcome_text"
        android:fontFamily="@font/bungee_regular"
        android:textColor="@color/black">

    </TextView>

    <TextView
        android:id="@+id/sign_up_to_continue_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_to_continue"
        android:textSize="18sp"
        android:textColor="@color/black">

    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/first_name_field_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/first_name_hint"
            android:layout_marginBottom="5dp"
            android:textColorHint="@color/black">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/first_name_field_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></com.google.android.material.textfield.TextInputEditText>


        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/last_name_field_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/last_name_hint"
            android:layout_marginBottom="5dp"
            android:textColorHint="@color/black">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/last_name_field_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></com.google.android.material.textfield.TextInputEditText>


        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_field_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/email_hint"
            android:layout_marginBottom="5dp"
            android:textColorHint="@color/black">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_field_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></com.google.android.material.textfield.TextInputEditText>


        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_field_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:textColorHint="@color/black"
            android:hint="@string/password_hint"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="5dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_field_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"></com.google.android.material.textfield.TextInputEditText>


        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/repeat_password_field_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:textColorHint="@color/black"
            android:hint="@string/repeat_password_hint"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="5dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/repeat_password_field_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"></com.google.android.material.textfield.TextInputEditText>


        </com.google.android.material.textfield.TextInputLayout>





        <Button
            android:id="@+id/registration_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:layout_gravity="right"
            android:background="@color/black"
            android:elevation="0dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"></Button>
        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/already_registered"
            android:textColor="@color/black"
            android:layout_gravity="right"
            android:background="@android:color/transparent"
            android:elevation="0dp"
            android:layout_margin="5dp"></Button>

    </LinearLayout>


</LinearLayout>