<?xml version="1.0" encoding="utf-8"?>

<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.login.LoginActivity"
    android:orientation="vertical"
    android:padding="20dp"
    >

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/loginLogo"
        android:src="@drawable/app_icon"
        android:transitionName="logo_image"

        ></ImageView>

    <TextView
        android:id="@+id/welcomeLoginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="40sp"
        android:transitionName="welcome_text"
        android:fontFamily="@font/bungee_regular"
        android:textColor="@color/black">

    </TextView>

    <TextView
        android:id="@+id/sign_up_to_continue_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_to_continue"
        android:textSize="18sp"
        android:textColor="@color/black">

    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/activity_login_email_field_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/email_hint"
            android:layout_marginBottom="5dp"
            android:textColorHint="@color/black">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_login_email_field_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_email_24"></com.google.android.material.textfield.TextInputEditText>


        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/activity_login_password_field_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:textColorHint="@color/black"
            android:hint="@string/password_hint"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="5dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_login_password_field_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:drawableStart="@drawable/ic_baseline_vpn_key_24"></com.google.android.material.textfield.TextInputEditText>


        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/activity_login_forget_password_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:layout_gravity="right"
            android:background="@android:color/transparent"
            android:elevation="0dp"
            android:layout_margin="5dp"></Button>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/activity_login_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:indeterminateTint="@color/black"
                android:visibility="gone">

            </ProgressBar>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_hint"
            android:textColor="@color/white"
            android:layout_gravity="right"
            android:background="@color/black"
            android:elevation="0dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"></Button>


        <Button
            android:id="@+id/register_button_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_hint"
            android:textColor="@color/black"
            android:layout_gravity="right"
            android:background="@android:color/transparent"
            android:elevation="0dp"
            android:layout_margin="5dp"></Button>

    </LinearLayout>


</LinearLayout>

</ScrollView>