<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmailConfirmationActivity"
    android:background="@color/yellow">


    <ImageView
        android:id="@+id/activity_reset_password_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_baseline_lock_open_24"

        android:transitionName="logo_image"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.151"></ImageView>
    <TextView
        android:id="@+id/activity_reset_password_email_sent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bungee_regular"
        android:padding="15dp"
        android:text="@string/reset_password_email_sent"
        android:textAlignment="center"

        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_reset_password_logo"
        app:layout_constraintVertical_bias="0.0"
        android:visibility="gone"></TextView>

    <TextView
        android:id="@+id/activity_reset_password_email_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bungee_regular"
        android:padding="15dp"
        android:text="@string/send_password_reset_email_information"
        android:textAlignment="center"

        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_reset_password_logo"
        app:layout_constraintVertical_bias="0.0"></TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_reset_password_field_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/activity_reset_password_send_email_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_reset_password_email_information"
        app:layout_constraintVertical_bias="0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity_reset_password_field_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_email_24">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>


    <ProgressBar
        android:id="@+id/activity_reset_password_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:indeterminateTint="@color/black"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/activity_reset_password_send_email_button"
        android:visibility="gone">

    </ProgressBar>

    <Button
        android:id="@+id/activity_reset_password_send_email_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginBottom="92dp"
        android:background="@color/black"
        android:text="@string/send_reset_password_email_button_hint"

        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_reset_password_email_information"></Button>
    <Button
        android:id="@+id/activity_reset_password_go_to_login_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginBottom="92dp"
        android:background="@color/black"
        android:text="@string/go_to_login"

        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_reset_password_email_information"
        android:visibility="gone"></Button>

</androidx.constraintlayout.widget.ConstraintLayout>